# StremioSubMaker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENCRYPTION.md  LICENSE  README.md  ROADMAP.md  diff.txt  docker-compose.local.yaml  docker-compose.yaml  docker-entrypoint.sh  index.js  package-lock.json  package.json  release_notes.md  test-encryption.js  vault-css-backup.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  feature_request.yml  question.yml
docs/: DOCKER.md  FFSUBSYNC-WASM.md
locales/: ar.json  en.json  es.json  pt-br.json  pt-pt.json
native/ffsubsync-wasm/: Cargo.toml
native/ffsubsync-wasm/src/: lib.rs
public/: config-v2.html  config.js  configure-v2.html  configure.html  sw.js
public/css/: combobox.css  config-v2.css  configure.css  quick-setup.css
public/js/: config-loader.js  config-page-state.js  config-v2.js  help-modal.js  init.js  quick-setup.js  subtitle-menu.js  sw-register.js  theme-toggle.js  ui-widgets.js
public/partials/: footer.html  main-v2.html  main.html  overlays.html  quick-setup.html
scripts/: build-ffsubsync-wasm.sh  check-locale-headers.js
src/: config.html  gemini.js  index.js  languages.js  opensubtitles.js  subtitleHandler.js
src/config/: defaultApiKeys.js
src/handlers/: subtitles.js
src/routes/: fileUploadRoutes.js
src/services/: anidb.js  gemini.js  (+11 more)
tests/: assConversion.test.js  configPageState.test.js  localSubtitleHashResolver.test.js  sessionManager.test.js  streamActivity.test.js  subdl.test.js
(+45 files in other folders)
