[package]
name = "ffsubsync-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["SubMaker xSync"]
description = "WASM build of ffsubsync-style audio-to-subtitle aligner for SubMaker xSync"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
log = "0.4"
rustfft = "6.2"
num-complex = "0.4"
thiserror = "1.0"

# Placeholder deps. The real build will add:
# - webrtc-vad via cc/webrtc-vad-sys
# - rustfft/realfft for FFT
# - small SRT parser (pure Rust)
# - optional resampler if we don't resample in JS

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
